Migrate from `npm:@raha.group/hetzner-cloud`

--- a/package.json
+++ b/package.json
@@ -1,18 +1,31 @@
 {
-  "name": "@nezarati/hetzner-cloud",
-  "version": "1.0.3",
-  "description": "A JavaScript integration for the Hetzner cloud to easily manage your resources.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "hetzner",
-    "cloud",
-    "api",
-    "client"
-  ],
-  "author": "Mahdi NezaratiZadeh",
-  "license": "ISC",
-  "type": "module"
+	"name": "@raha.group/hetzner-cloud",
+	"version": "1.0.8",
+	"description": "A native JavaScript integration for the Hetzner cloud to easily manage your resources.",
+	"dependencies": {},
+	"main": "main.js",
+	"type": "module",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"hetzner",
+		"cloud",
+		"api",
+		"client"
+	],
+	"contributors": [
+		"Mahdi NezaratiZadeh"
+	],
+	"license": "CC-BY-SA-4.0",
+	"bugs": {
+		"url": "https://groups.google.com/d/forum/rahagroup"
+	},
+	"homepage": "https://raha.group",
+	"funding": [
+		{
+			"type" : "paypal",
+			"url" : "https://paypal.com/cgi-bin/webscr?cmd=_donations&business=RZC8HCR5SPGQY&item_name=Contribute+to+Raha%27s+ongoing+maintenance+and+development&currency_code=USD&source=url"
+		}
+	]
 }
